tests/should_succeed/imported/point_factory.jou
from "./bar.jou" import Point

def make_point() -> Point:
    return Point{x=1, y=2}
